--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/posenet": "^2.1.3",
+    "@tensorflow/tfjs-converter": "^1.3.0",
+    "@tensorflow/tfjs-core": "^1.3.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-webcam": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
