--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,8 @@
     "128": "logo512.png"
   },
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "permissions": []
+  "permissions": [
+    "notifications",
+    "videoCapture"
+  ]
 }
