Added tensorflow without html

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,9 @@
   "permissions": [
     "notifications",
     "videoCapture"
-  ]
+  ],
+  "background": {
+    "scripts": ["camera.283d5d54.js"],
+    "persistent": false
+  }
 }
