--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tensorflow-models/posenet": "^2.1.3",
     "@tensorflow/tfjs-converter": "^1.3.0",
     "@tensorflow/tfjs-core": "^1.3.0",
+    "chart.js": "^2.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
@@ -13,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
