--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
   "author": "Zion Fung",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.9.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.3",
