--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "push.js": "^1.0.12",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-share": "^3.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "showdown": "^1.9.0",
